<resources>
    <string name="app_name">WayToCode</string>
    <string name="welcome">Welcome,</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="please_sign_in_to_continue">Please Sign In To Continue.</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot_Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="skip">skip</string>
    <string name="password">Password</string>
    <string name="confirm_password">confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing">Lorem ipsum dolor sit amet, consectetur adipiscing</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="technologies">Technologies</string>
    <string name="career">Career</string>
    <string name="about_us">ABOUT US</string>
    <string name="contact_us">Contact us</string>
    <string name="way_to_code_gallery">Way To Code Gallery</string>
    <string name="logout">Logout</string>
    <string name="ceo_amp_founder"><![CDATA[CEO&Founder]]></string>
    <string name="services">Services</string>
    <string name="portfolio">Portfolio</string>
    <string name="training">Training</string>
    <string name="technology">Technology</string>
    <string name="the_simplest_form_of_technology_is_the_development_and_use_of_basic_tools_the_prehistoric_invention_of_shaped_stone_tools_followed_by_the_discovery_of_how_to_control_fire_increased_sources_of_food_the_later_neolithic_revolution_extended_this_and_quadrupled_the_sustenance_available_from_a_territory_the_invention_of_the_wheel_helped_humans_to_travel_in_and_control_their_environment">The simplest form of technology is the development and use of basic tools. The prehistoric invention of shaped stone tools followed by the discovery of how to control fire increased sources of food. The later Neolithic Revolution extended this, and quadrupled the sustenance available from a territory. The invention of the wheel helped humans to travel in and control their environment.</string>
    <string name="he_has_excellent_technical_skills_in_java_android_flutter_ror_python_django_graphics_designing_software_testing_etc">he has excellent technical skills in java android flutter ror python django graphics designing software testing etc</string>
    <string name="multi_tasker_developer_ceo_of_way_to_code_technologies">multi tasker developer ceo of way to code technologies</string>
    <string name="experience">Experience</string>
    <string name="_8_years">8 years</string>
    <string name="contact">Contact</string>
    <string name="_7976664814_7948997192">7976664814 7948997192</string>
    <string name="info_waytocode_in">info@waytocode in</string>
    <string name="ceo_amp_founder_vinod_sonava"><![CDATA[Ceo & Founder Vinod Sonava]]></string>
    <string name="feedback">Feedback</string>
    <string name="project_name">Project Name</string>
    <string name="name">Name</string>
    <string name="leave_a_message">Leave a Message</string>
    <string name="submit">Submit</string>
    <string name="android_developer">Android Developer</string>
    <string name="we_hire_android_developer_who_has_excellent_problem_solving_and_debugging_skills">We hire Android Developer who has excellent problem solving and debugging skills.</string>
    <string name="help_building_coding_skills_problem_solving_skills">Help Building Coding Skills, Problem Solving Skills.</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="python_developer">PYTHON DEVELOPER</string>
    <string name="we_hire_python_developer_who_has_excellent_problem_solving_and_debugging_skills">We hire Python Developer who has excellent problem solving and debugging skills.</string>
    <string name="job_requirements">JOB REQUIREMENTS</string>
    <string name="b_e_b_tech_bca_mca_from_any_reputed_university">B.E/B.Tech/BCA/MCA From Any Reputed University</string>
    <string name="_2_years_of_experience_in_software_company_is_an_advantage">2 Years Of Experience In Software Company Is An Advantage.</string>
    <string name="manage_and_execute_lead_generation_activities">Manage And Execute Lead Generation Activities.</string>
    <string name="java_developer">JAVA DEVELOPER</string>
    <string name="job_responsibilities">JOB RESPONSIBILITIES</string>
    <string name="design_and_implement_java_applications">Design And Implement Java Applications</string>
    <string name="experience_of_html_css_javascript">Experience Of HTML, CSS, Javascript</string>
    <string name="experience_of_object_oriented_programming_concepts">Experience Of Object-Oriented Programming Concepts</string>
    <string name="benefits">BENEFITS</string>
    <string name="very_competitive_salary_and_long_term_benefits_with_excellent_career_opportunity">Very Competitive Salary And Long Term Benefits With Excellent Career Opportunity</string>
    <string name="training_on_new_technology">Training On New Technology.</string>
    <string name="most_importantly_a_friendly_work_environment_with_opportunity_to_learn_from_a_number_of_highly_skilled_mentors">Most Importantly A Friendly Work Environment With Opportunity To Learn From A Number Of Highly Skilled Mentors.</string>
    <string name="way_to_code">WAY TO CODE</string>
    <string name="we_are_at_way_to_code">WE ARE AT WAY TO CODE</string>
    <string name="our_company">OUR COMPANY </string>
    <string name="why_chose_us">WHY CHOSE US</string>
    <string name="our_mission">Our Mission</string>
    <string name="our_mission_is_the_complete_satisfaction_of_the_client_by_providing_them_cost_effective_and_efficient_services">Our mission is the complete satisfaction of the client by providing them cost effective and efficient services.</string>
    <string name="our_vision">Our Vision</string>
    <string name="our_vision_is_to_combine_quality_web_design_with_offshore_development_in_order_to_provide_online_solutions">Our Vision is to combine quality web design with offshore development in order to provide online solutions.</string>
    <string name="we_commit_to">We Commit To</string>
    <string name="intensely_focus_towards_customers_to_attain_their_categorical_requirements_deliver_economical_yet_efficient_competent_and_innovative_services">Intensely focus towards customers to attain their categorical requirements. Deliver economical yet efficient, competent and innovative services.</string>
    <string name="welcome_to_the_result_oriented_development_company_in_ahmedabad">Welcome To The Result Oriented Development Company In Ahmedabad</string>
    <string name="for_over_5_years_we_have_done_all_the_obstacles_and_our_experts_have_also_finished_very_hard_tasks_with_easy_age">For over 5 years, we have done all the obstacles and our experts have also finished very hard tasks with easy age.</string>
    <string name="explore_now">EXPLORE Now</string>
    <string name="what_is_way_to_code">WHAT IS WAY TO CODE</string>
    <string name="best_development_compnany_for_web_and_mobile_application">Best development compnany for Web and Mobile application.</string>
    <string name="we_have_well_experienced_and_hard_working_team_who_always_works_for_envision_to_the_requirements_of_client">We have well experienced and hard working team who always works for envision to the requirements of client.</string>
    <string name="we_provide_cost_effective_solutions_for_the_advanced_internet_projects">We provide cost-effective solutions for the advanced Internet projects.</string>
    <string name="way_to_code_technologies_built_android_applications_for_wide_domain_areas_and_industries_like_business_fitness_e_commerce_and_sales_force">Way To Code Technologies, built Android applications for wide domain areas and industries like Business, Fitness, E-commerce, and Sales Force.</string>
    <string name="our_expert_team_members_provide_the_best_services_for_your_organization_your_work_time_is_precious_for_us_we_ensure_it_is_built_by_our_web_designing_and_development_experts"><![CDATA[Our expert team members provide the best services for your organization. Your work & time is precious for us & we ensure it is built by our web designing and development experts.]]></string>
    <string name="our_team">Our Team</string>
    <string name="we_are_at_here_team_of_passionate_developer_to_accomplish_your_toughest_task_with_perfect_planned_manner_and_result_oriented_way_since_2015_we_have_been_providing_the_best_service_and_satisfaction_to_our_clients">We are at here team of passionate developer to accomplish your toughest task with perfect planned manner and result oriented way. Since 2015, we have been providing the best service and satisfaction to our clients.</string>
    <string name="blog">BLOG</string>
    <string name="call_us">CALL US</string>
    <string name="_91_7976664814_919461262751">+91 7976664814 +919461262751</string>
    <string name="address">ADDRESS</string>
    <string name="_218_4th_floor_moonlight_complex_drive_in_rd_above_metro_pillar_no_114_gurukul_ahmedabad_gujarat_380054">218, 4th Floor, Moonlight Complex,Drive In Rd, Above Metro Pillar No.114,Gurukul,Ahmedabad, Gujarat 380054</string>
    <string name="email_us">EMAIL US</string>
    <string name="web_development">Web Development</string>
</resources>