<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:checkable="true"
            android:checked="true"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Traning"
            android:checkable="true"
            android:icon="@drawable/ic_training"
            android:title="@string/training" />
        <item
            android:id="@+id/nav_Career"
            android:checkable="true"
            android:icon="@drawable/ic_career"
            android:title="@string/career" />
        <item
            android:id="@+id/nav_Aboutus"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_Contactus"
            android:icon="@drawable/ic_contactus"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_Blog"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/blog" />
        <item
            android:id="@+id/nav_Feedback"
            android:icon="@drawable/ic_feed"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_CEO"
            android:icon="@drawable/ic_ceo"
            android:title="@string/ceo_amp_founder" />
        <item
            android:id="@+id/nav_WayToCodeGallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/way_to_code_gallery" />

        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />


    </group>
</menu>