<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/introbg"
    tools:context=".SigninActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/ic_logo"
        android:layout_gravity="center" />



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signingbg"
        android:padding="30dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="32sp"
            android:fontFamily="@font/montserratbold"
            android:textColor="@color/darkcolor"
            android:layout_marginTop="30dp"
            android:padding="20dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_sign_in_to_continue"
            android:textSize="20sp"
            android:fontFamily="@font/montserratbold"
            android:textColor="@color/darkcolor" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/edtemail"
            android:textColorHint="@color/lightcolor"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_email"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:maxLength="36"
            android:minLines="1"
            android:background="@drawable/button_bg"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/lightcolor"
            android:layout_marginTop="20dp"
            android:id="@+id/edtpass"
            android:padding="10dp"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_password"
            android:textSize="18sp"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:maxLength="8"
            android:minLines="1"
            android:background="@drawable/button_bg"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/txtforgotpassword"
            android:gravity="end"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:fontFamily="@font/montserratbold"
            android:textColor="@color/darkcolor" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/btn_signin"
            android:textAllCaps="false"
            android:background="@drawable/button_bg_2"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserratbold"
            android:textSize="24sp"
            android:padding="10dp"
            android:textColor="@color/white"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:fontFamily="@font/montserratbold"
                android:textColor="@color/lightcolor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="10dp"
                android:id="@+id/txtsignup"
                android:textSize="20sp"
                android:fontFamily="@font/montserratbold"
                android:textColor="@color/darkcolor" />



        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_gravity="end"
            android:id="@+id/txtskip"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:fontFamily="@font/montserratbold"
            android:textColor="@color/darkcolor" />






    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>