<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/introbg"
    tools:context=".fragment.CEOFounderFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ceo_amp_founder_vinod_sonava"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/montserratbold"
                />



            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/vinod_ceo"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/multi_tasker_developer_ceo_of_way_to_code_technologies"
                android:fontFamily="@font/montserratbold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/he_has_excellent_technical_skills_in_java_android_flutter_ror_python_django_graphics_designing_software_testing_etc"
                android:fontFamily="@font/montserratbold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/experience"
                    android:fontFamily="@font/montserratbold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_8_years"
                    android:fontFamily="@font/montserratbold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact"
                    android:fontFamily="@font/montserratbold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_7976664814_7948997192"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/montserratbold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="start" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:fontFamily="@font/montserratbold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/info_waytocode_in"
                    android:fontFamily="@font/montserratbold"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>