<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/introbg"
    tools:context=".fragment.FeedbackFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textSize="32sp"
        android:fontFamily="@font/montserratbold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/welcome"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/welcome"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/leave_a_message"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/welcome"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/darkcolor"
            android:fontFamily="@font/welcome"
            android:layout_marginTop="30dp"
            android:background="@drawable/feedbackbg"
            android:textSize="22sp"
            />





    </androidx.appcompat.widget.LinearLayoutCompat>







</androidx.appcompat.widget.LinearLayoutCompat>