<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/introbg"
    tools:context=".fragment.ContactusFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CONTACT US"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserratbold"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/call_us"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_cellphone"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/welcome"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_91_7976664814_919461262751"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/welcome"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_218_4th_floor_moonlight_complex_drive_in_rd_above_metro_pillar_no_114_gurukul_ahmedabad_gujarat_380054"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email_us"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_aboutemail"
                android:drawablePadding="10dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/welcome"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_waytocode_in"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>